# routes/User.js
@@ -1,0 +1,7 @@
+const express = require('express')
+const router = express.Router()
+const { getUser } = require('../controllers/User')
+
+router.route('/').get(getUser)
+
+module.exports = router
